IDevicePropertiesManager service added.

--- a/src/main/resources/soft.iot.dlt.auth.cfg
+++ b/src/main/resources/soft.iot.dlt.auth.cfg
@@ -3,3 +3,4 @@ MQTTHost=tcp://localhost
 MQTTPort=1883
 MQTTUsername=karaf
 MQTTPassword=karaf
+MappingDevicePID=br.ufba.dcc.wiser.soft_iot.gateway.mapping_devices
