--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,63 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.uefs.larsid.dlt.iot.soft</groupId>
+    <groupId>io.github.larsid</groupId>
     <artifactId>SOFT-IoT-DLT-Auth</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>SOFT-IoT-DLT-Auth</name>
     <description>SOFT-IoT-DLT-Auth OSGi blueprint bundle project.</description>
+
+    <url>https://github.com/larsid/soft-iot-mapping-devices</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Uellington Damasceno</name>
+            <email>udamasceno@ecomp.uefs.br</email>
+            <organization>LARSID</organization>
+            <organizationUrl>https://github.com/larsid/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/larsid/soft-iot-dlt-auth.git</connection>
+        <developerConnection>scm:git:ssh://github.com:larsid/soft-iot-dlt-auth.git</developerConnection>
+        <url>http://github.com/larsid/soft-iot-dlt-auth/tree/main</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>ossrh-snapshots</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>br.ufba.dcc.wiser.soft_iot</groupId>
+            <groupId>io.github.larsid</groupId>
             <artifactId>soft-iot-mapping-devices</artifactId>
-            <version>1.0.0</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
@@ -64,6 +109,35 @@
                     <target>1.8</target>
                     <maxmem>256M</maxmem>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                    <id>sign-artifacts</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>sign</goal>
+                    </goals>
+                    <configuration>
+                        <skip>true</skip>
+                        <keyname>${env.GPG_KEYNAME}</keyname>
+                    </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
